Qui Jun 11 11:44:49 BRT 2015
- Create lib.sh module
- Improves the compilers file
- Variables in the rede.sh file
- Create the README file

Tue Jun 16 10:13:25 BRT 2015
- Add the samples DIR
- Add AUTHOR in AUTHORS file
- Create the libreoffice.sh file
- Adding a new collaborator (Artur)

Qui Jun 18 10:47:13 BRT 2015
- Optimizing libreoffice.sh file
- Renaming libreoffice.sh to office.sh
- Adding error handling on all files
- Creating the module main.sh

Thu Jun 18 11:11:08 BRT 2015
- Office bug fixies in error log
- main.sh bug fixies em reference to office.sh