@@ -1,4 +1,4 @@
-Thu Jun 18 11:20:32 BRT 2015
+Fri Jun 19 15:57:40 BRT 2015
 LibreOffice 1 OK
 DOC/PDF 1 OK
 DOC/ODT 1 OK
